ssl-accept-untrusted/gateway.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
  - name: 0.0.0.0_443
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              format: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %UPSTREAM_HOST% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" - %RESPONSE_CODE% - %RESPONSE_FLAGS% \n"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: httpbin.8000
            virtual_hosts:
            - name: httpbin
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/headers"
                route:
                  cluster: httpbin-8000
          stat_prefix: httpbin-8000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/pki/tls/certs/gateway.local.crt
              private_key:
                filename: /etc/pki/tls/private/gateway.local.key
            validation_context:
              trusted_ca:
                filename: /etc/pki/tls/certs/root-ca.crt
              trust_chain_verification: ACCEPT_UNTRUSTED
          #require_client_certificate: true
  clusters:
  - name: httpbin-8000
    connect_timeout: 0.25s
    type: STRICT_DNS
    load_assignment:
      cluster_name: httpbin-8000
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 8000
